# agentic_ai

agentic_Ai/01_uv/: README.md  pyproject.toml
agentic_Ai/01_uv/project02_uv/: main.py  pyproject.toml
agentic_Ai/02_openrouter/: README.md  main.py  pyproject.toml
agentic_Ai/02_openrouter/src/02_openrouter/: __init__.py
agentic_Ai/03_litellm_openai_agent/project_chatbot/: pyproject.toml
agentic_Ai/hello_agent/: main.py  pyproject.toml
