[project]
name = "02-openrouter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "shaziasama", email = "shaziasamma921@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
02-openrouter = "02_openrouter:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
